--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-three/drei": "^9.51.19",
     "@react-three/fiber": "^8.10.0",
     "@types/three": "^0.148.0",
+    "gsap": "^3.11.4",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.148.0"
+    "three": "^0.148.0",
+    "wouter": "^2.10.0-alpha.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
