--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "r3f-boilerplate",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/drei": "^9.51.19",
-    "@react-three/fiber": "^8.10.0",
-    "@types/three": "^0.148.0",
-    "gsap": "^3.11.4",
-    "leva": "^0.9.34",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.148.0",
-    "wouter": "^2.10.0-alpha.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
-  }
+    "name": "r3f-boilerplate",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@react-three/drei": "^9.51.19",
+        "@react-three/fiber": "^8.10.0",
+        "@types/three": "^0.148.0",
+        "framer-motion": "^8.5.0",
+        "gsap": "^3.11.4",
+        "leva": "^0.9.34",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.7.0",
+        "three": "^0.148.0",
+        "wouter": "^2.10.0-alpha.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@vitejs/plugin-react": "^3.0.0",
+        "vite": "^4.0.0"
+    }
 }
