--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@lottiefiles/react-lottie-player": "^3.5.0",
         "@react-three/drei": "^9.51.19",
         "@react-three/fiber": "^8.10.0",
         "@types/three": "^0.148.0",
+        "canvas-confetti": "^1.6.0",
         "framer-motion": "^8.5.0",
         "gsap": "^3.11.4",
         "leva": "^0.9.34",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.7.1",
         "react-router-dom": "^6.7.0",
         "three": "^0.148.0",
         "wouter": "^2.10.0-alpha.1"
